<resources>
    <string name="app_name">WeatherCard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Weather</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_setting">Setting</string>

    //fragment_home.xml
    <string name="yahoo">Yahoo Weather API</string>
    <string name="defaultHighLow">20-11°C</string>
    <string name="defaultDate">Jul 18</string>
    <string name="defaultWeekDay">Monday</string>
    <string name="defaultText">기본텍스트</string>
    <string name="defaultTemp">0°C</string>
    <string name="defaultWeather">맑음</string>
    <string name="defaultCity">경산</string>

    //fragment_setting.xml
    <string name="metricSetting">화씨(Fahrenheit) 사용 </string>
    <string name="openSourceLicense">오픈소스 라이선스 </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TodayTitle">Today</string>
</resources>