<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_marginBottom="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    android:transitionName="weatherCardTransition">

    <RelativeLayout
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/weekdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultWeekDay"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultDate"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/weatherImageView"
            android:layout_marginRight="8dp"
            android:layout_width="44sp"
            android:layout_height="44sp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true">
        </ImageView>

        <TextView
            android:id="@+id/minMaxTempTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/defaultHighLow"
            android:textSize="24sp"
            android:paddingLeft="32dp">
        </TextView>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
