<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_marginBottom="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    android:transitionName="weatherCardTransition">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cityNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/defaultCity"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/regionNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/defaultCity"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/weatherStringTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/defaultWeather"
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <View
                android:id="@+id/centerline"
                android:layout_width="1sp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/currentTempTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/centerline"
                android:gravity="center"
                android:text="@string/defaultTemp"
                android:textSize="48sp" />

            <ImageView
                android:id="@+id/weatherImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/centerline"
                android:gravity="center" />

        </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
